nivasa-macros/tests/trybuild/config_schema_duplicate_default.rs
use nivasa_macros::ConfigSchema;

#[derive(ConfigSchema)]
struct BadConfig {
    #[schema(default = "3000", default = "4000")]
    port: String,
}

fn main() {}
